# monorepo-pants-docker-django

./: .gitignore  BUILD  README.md  docker-compose.yml  pants.toml  pyproject.toml
django_project/: BUILD  Dockerfile
django_project/hello_app/: urls.py  views.py
django_project/project_root/: asgi.py  settings.py  urls.py  wsgi.py
